# backend/src/uploads/uploads.controller.ts
@@ -9,6 +9,7 @@ import { FileInterceptor } from '@nestjs/platform-express';
 import { UploadsService } from './uploads.service';
 import { UploadCsvDto } from './dto/upload-csv.dto';
 import { SendCsvDto } from './dto/send-csv.dto';
+import { FilterCsvDto } from './dto/filter-csv.dto';
 
 @Controller('uploads')
 export class UploadsController {
@@ -24,6 +25,12 @@ export class UploadsController {
   @UseInterceptors(FileInterceptor('file'))
   sendCsv(@UploadedFile() file: Express.Multer.File, @Body() dto: SendCsvDto) {
     return this.uploadsService.sendCsv(file, dto);
+  }
+
+  @Post('csv/filter')
+  @UseInterceptors(FileInterceptor('file'))
+  filterCsv(@UploadedFile() file: Express.Multer.File, @Body() dto: FilterCsvDto) {
+    return this.uploadsService.filterCsv(file, dto);
   }
 }
 
